--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -355,6 +355,11 @@ input, select, textarea {
 			width: 33.33333%;
 		}
 
+        .row > .col-55 {
+            width: 50%;
+        }
+
+
 		.row > .off-4 {
 			margin-left: 33.33333%;
 		}
